final chicken with alignment corrections

--- a/Labs/Lab2/777/css/styles.css
+++ b/Labs/Lab2/777/css/styles.css
@@ -37,7 +37,7 @@
     
     input{
         top:75px;
-        left:890px;
+        left:940px;
         position:absolute;
         font-size:1.3em;
         background-color: Transparent;
@@ -54,7 +54,7 @@
      position:absolute;
      text-align:center;
      top:450px;
-     left:400px;
+     left:350px;
      font-family: 'Baloo Bhaijaan', cursive;
      font-size:1.5em;
      line-height: .7em;
